[package]
name = "madvr_parse"
version = "1.0.1"
authors = ["quietvoid"]
edition = "2021"
rust-version = "1.56.1"
license = "MIT"
description = "madVR measurement file library"
repository = "https://github.com/quietvoid/madvr_parse"

[dependencies]
anyhow = "1.0.71"
byteorder = "1.4.3"

[lib]
doctest = false
