[package]
name = "madvr_parse"
version = "1.0.2"
authors = ["quietvoid"]
edition = "2021"
rust-version = "1.70.0"
license = "MIT"
description = "madVR measurement file library"
repository = "https://github.com/quietvoid/madvr_parse"

[dependencies]
anyhow = "1.0.95"
byteorder = "1.5.0"

[lib]
doctest = false
